--- a/src/react-components/primitives/input/style.css
+++ b/src/react-components/primitives/input/style.css
@@ -1,7 +1,6 @@
 .input {
+  display: flex;
   width: 100%;
-  padding: 8px;
-  box-sizing: border-box;
   border-radius: 32px;
   background: #eeeeee;
   transition: .3s ease;
@@ -9,8 +8,7 @@
 
 .input input {
   width: 100%;
-  padding: 0 8px;
-  box-sizing: border-box;
+  padding: 10px 20px;
   border: none;
   outline: none;
   background: none;
