--- a/src/react-components/footer/style.css
+++ b/src/react-components/footer/style.css
@@ -3,11 +3,17 @@
   width: 100%;
   max-width: 600px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
+  gap: 6px;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
   background: #eeeeee;
   color: #aaaaaa;
   font-size: 12px;
+}
+
+.footer a {
+  color: #aaaaaa;
 }
