--- a/src/react-components/footer/style.css
+++ b/src/react-components/footer/style.css
@@ -2,18 +2,30 @@
   height: 100%;
   width: 100%;
   max-width: 600px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  gap: 6px;
   border-top-left-radius: 16px;
   border-top-right-radius: 16px;
-  background: #eeeeee;
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  background: #ffffff;
+  box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
+}
+
+.footer__info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 6px;
   color: #aaaaaa;
   font-size: 12px;
 }
 
-.footer a {
+.footer__info a {
   color: #aaaaaa;
+}
+
+.footer__button a {
+  display: flex;
+  align-items: center;
 }
