--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   flex-grow: 1;
   width: 100%;
   max-width: 1335px;
@@ -21,7 +22,7 @@
 }
 
 .layout__footer {
-  height: 60px;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
