--- a/src/react-components/converter/style.css
+++ b/src/react-components/converter/style.css
@@ -1,7 +1,24 @@
 .converter {
   width: 100%;
-  max-width: 666px;
+  max-width: 400px;
   display: flex;
   flex-direction: column;
-  gap: 16px;
+  gap: 48px;
+  padding: 56px;
+  border-radius: 40px;
+  background: #ffffff;
+  box-shadow: 0 6px 24px rgba(0, 0, 0, 0.1);
+  position: relative;
+}
+
+.converter__bg {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  transition: .5s ease-out;
+  padding: 12px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100%;
 }
