--- a/src/react-components/currencySelect/style.css
+++ b/src/react-components/currencySelect/style.css
@@ -1,7 +1,8 @@
 .currencySelect {
   width: 100%;
   display: flex;
-  gap: 16px;
+  flex-wrap: wrap;
+  gap: 8px;
 }
 
 .currencySelect__flag {
@@ -16,5 +17,6 @@
 }
 
 .currencySelect__input {
-  flex-grow: 1;
+  flex: 1 0 100%;
+  font-size: 20px;
 }
