--- a/src/layout/style.css
+++ b/src/layout/style.css
@@ -22,8 +22,14 @@
 }
 
 .layout__footer {
-  height: 80px;
+  min-height: 80px;
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+@media screen and (max-width: 768px) {
+  .layout__content {
+    padding: 20px 0;
+  }
 }
