--- a/src/react-components/converter/style.css
+++ b/src/react-components/converter/style.css
@@ -22,3 +22,15 @@
   justify-content: center;
   border-radius: 100%;
 }
+
+@media screen and (max-width: 768px) {
+  .converter {
+    padding: 0;
+    box-shadow: none;
+  }
+  .converter__bg {
+    left: 0;
+    right: 0;
+    bottom: -50%;
+  }
+}
