--- a/src/react-components/currencySelect/style.css
+++ b/src/react-components/currencySelect/style.css
@@ -20,3 +20,9 @@
   flex: 1 0 100%;
   font-size: 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .currencySelect {
+    justify-content: center;
+  }
+}
