--- a/src/react-components/footer/style.css
+++ b/src/react-components/footer/style.css
@@ -7,6 +7,7 @@
   display: flex;
   align-items: center;
   justify-content: space-evenly;
+  gap: 16px;
   background: #ffffff;
   box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
 }
@@ -28,4 +29,11 @@
 .footer__button a {
   display: flex;
   align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+  .footer {
+    width: 75%;
+    padding: 10px 30px;
+  }
 }
